Fixed forecast Alignment

--- a/src/style.css
+++ b/src/style.css
@@ -92,14 +92,18 @@ text-decoration: none;
 
 #forecast {
   margin-bottom: 30px;
-  text-align: center;
-  background: rgba(255, 255, 255, 0.5);
+
+ ;
+
+  display: block;
+}
+.weekcast {
+text-align: center;
+ background: rgba(202, 48, 156, 0.144);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(9px);
   border-radius: 30px;
   border: 1px solid rgba(255, 255, 255, 0.18);
-  max-width: 110px;
-  display: block;
 }
 .weather-forecast-date {
   font-size: 16px;
